--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="list">List</string>
     <string name="grid">Grid</string>
     <string name="card_view">Card View</string>
+    <string name="favourite">fav</string>
+    <string name="share">share</string>
 </resources>
